[package]
name = "tic-tac-toe"
version = "0.1.0"
authors = ["Ahmed"]
edition = "2021"
build = "build.rs"
description = "Tic tac toe game"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = "1.4"

[build-dependencies]
slint-build = "1.4"

[package.metadata.bundle]
name = "Tic-Tac-Toe"
identifier = "io.github.amax23.tic-tac-toe"
