[package]
name = "tic-tac-toe"
version = "0.1.0"
authors = ["Ahmed"]
edition = "2021"
build = "build.rs"
description = "Tic tac toe game"

[[bin]]
path = "src/main.rs"
name = "tic-tac-toe"

[dependencies]
slint = "1.4"

[build-dependencies]
slint-build = "1.4"

# Remove the `#wasm#` to uncomment the wasm build.
# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/#wasm# //" to generate the wasm build.

#wasm# [lib]
#wasm# path = "src/main.rs"
#wasm# crate-type = ["cdylib"]

#wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm# wasm-bindgen = { version = "0.2" }
#wasm# web-sys = { version = "0.3", features=["console"] }
#wasm# console_error_panic_hook = "0.1.5"
#wasm# getrandom = { version = "0.2.2", features = ["js"] }
