[package]
name = "tic-tac-toe"
version = "0.1.0"
authors = ["Ahmed"]
edition = "2021"
build = "build.rs"
description = "Tic tac toe game"

[dependencies]
rand = "0.8.5"
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
web-sys = { version = "0.3", features = ["console", "Element", "HtmlCollection"] }
console_error_panic_hook = "0.1.5"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]
